--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -12,7 +12,8 @@ bind-key j select-pane -D
 bind-key k select-pane -U
 bind-key l select-pane -R
 # Look good
-# set-option -g default-terminal "screen-256color"
+set-option -g default-terminal "screen-256color"
+set-option -sa terminal-overrides ',screen-256color:RGB'
 # set -g default-terminal "xterm-256color"
 # Enable mouse support (works in iTerm)
 set -g mouse on
